--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1279,7 +1279,7 @@ h2,
 }
 h3,
 .h3 {
-  font-size: 24px;
+  font-size: 20px;
 }
 h4,
 .h4 {
@@ -5826,6 +5826,27 @@ button.list-group-item-danger.active:focus {
   height: 100%;
   border: 0;
 }
+
+.iframe-embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    border: 0;
+}
+.iframe-embed-wrapper {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+}
+.iframe-embed-responsive-16by9 {
+    padding-bottom: 56.25%;
+}
+
 .embed-responsive-16by9 {
   padding-bottom: 56.25%;
 }
