--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -47,6 +47,7 @@ of those sections to manage the look and feel of the site. */
   color:#fff;
 }
 .writing-section {
+  text-align: center;
     background:#fff;
     text-align: center;
     position: relative;
